# cli-cmd

./: .gitignore  LICENSE  README.md  TODO.md  clear.sh  meson.build  meson_options.txt
examples/: main.cpp
examples/first/: build.sh  first.cpp  run.sh
examples/likegcc/: main.cpp  options.cpp
examples/likegit/: developerfacing.cpp  external.cpp  interacting.cpp  interrogators.cpp  lowlevelinternal.cpp  lowlevelinterrogators.cpp  lowlevelmanipulators.cpp  lowlevelsyncing.cpp  main.cpp  manipulators.cpp  porcelain.cpp  userfacing.cpp
examples/mycli/: .gitignore  build.sh  mycli.cpp  run.sh
include/: cli-cmd-impl.hpp  cli-cmd.h  cli-cmd.hpp  distance-impl.hpp  distance.h  distance.hpp  error_codes.h  similar.hpp  util-impl.hpp  util.h  validator-impl.hpp  validator.h
src/: cli-cmd.cpp  distance.cpp  util.cpp  validator.cpp
tests/: test_arguments.cpp  test_clone_command.cpp  test_expect.cpp  test_extended_parsing.cpp  test_flag.cpp  test_global_local.cpp  test_parameters.cpp  test_similar.cpp  test_token_classification.cpp
